--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,9 @@ language: go
 
 go: 
   - "1.10"
-  - tip
+  
+script: 
+  - go test -race -coverprofile=coverage.txt -covermode=atomic ./...
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
